--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+ <img src="/images/logo.png" alt="SnowballasmediA logo" width="137" height="137" style="align:right;"> 
+
+
 Sitio web oficial de <b>SnowballasmediA</b>
 <br /><br />
 Absolutamente no hay nada aqui. <a href="https://snowballasmedia.miraheze.org">¿O si?</a>
