--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
+<img src="/images/logo.png" alt="SnowballasmediA logo" width="137" height="137"> <img src="/images/snowballasmediawordmark.png" alt="SnowballasmediA">
+
 Sitio web oficial de <b>SnowballasmediA</b>
 <br /><br />
 Absolutamente no hay nada aqui. <a href="https://snowballasmedia.miraheze.org">¿O si?</a>
 
 <link rel="stylesheet" type="text/css" href="styles.css">
-
-<br /> <br />
-<img src="/images/logo.png" alt="SnowballasmediA logo" width="137" height="137" style="align:right;">
