--- a/skins-logo-con-css.html
+++ b/skins-logo-con-css.html
@@ -1,3 +1,7 @@
+<img src="/images/logo.png" alt="SnowballasmediA logo" width="60" height="60"> <img src="/images/snowballasmediawordmark.png" alt="SnowballasmediA">
+<hr>
+<br /> <br />
+
 Esta es una lista <s>no</s> completa de todas las skins de MediaWiki (disponibles en SnowballaspediA y tal vez algunas otras de SnowballasmediA) que el logo esta definido por CSS
 
 <ul>
