--- a/es/index.html
+++ b/es/index.html
@@ -5,4 +5,4 @@ Sitio web oficial de <b>SnowballasmediA</b>
 <br /><br />
 Absolutamente no hay nada aqui. <a href="https://snowballasmedia.miraheze.org">¿O si?</a>
 
-<link rel="stylesheet" type="text/css" href="styles.css">
+<link rel="stylesheet" type="text/css" href="/styles.css">
