--- a/es/index.html
+++ b/es/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <img src="/images/logo.png" alt="SnowballasmediA logo" width="60" height="60"> <img src="/images/snowballasmediawordmark.png" alt="SnowballasmediA">
 <hr>
 <br /> <br />
