--- a/es/index.html
+++ b/es/index.html
@@ -6,4 +6,4 @@ Sitio web oficial de <b>SnowballasmediA</b>
 <br /><br />
 Absolutamente no hay nada aqui. <a href="https://snowballasmedia.miraheze.org">¿O si?</a>
 
-<link rel="stylesheet" type="text/css" href="snowballasmedia.us.to/styles.css">
+<link rel="stylesheet" type="text/css" href="http://snowballasmedia.us.to/styles.css">
