Update and rename skins-logo-con-css.html to es/skins-logo-con-css.html

--- a/es/skins-logo-con-css.html
+++ b/es/skins-logo-con-css.html
@@ -16,4 +16,4 @@ Esta es una lista <s>no</s> completa de todas las skins de MediaWiki (disponible
     <li>Splash (<a href="https://snowballaspedia.miraheze.org/wiki/Snowballasnoticias?useskin=splash">pero esta medio roto</a>)</li>
 </ul>
 
-<link rel="stylesheet" type="text/css" href="styles.css">
+<link rel="stylesheet" type="text/css" href="http://snowballasmedia.us.to/styles.css">
