--- a/404.html
+++ b/404.html
@@ -9,6 +9,6 @@ permalink: /404.html
 
 </h2>Yikes!</h2>
 
-You found a wild <b>404 error</b>, you probably typed the wrong URL! or this page was moved or deleted, or just literally typed "ijdakksjdlkajjojif" because of extreme boredom
+You found a wild <b>404 error</b>, you probably typed the wrong URL! or this page was moved or deleted, or you just literally typed "ijdakksjdlkajjojif" because of extreme boredom
 
 <link rel="stylesheet" type="text/css" href="styles.css">
