--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@ permalink: /404.html
 <hr>
 <br /> <br />
 
-</h2>Yikes!</h2>
+<h1>Yikes!</h1>
 
 You found a wild <b>404 error</b>, you probably typed the wrong URL! or this page was moved or deleted, or you just literally typed "ijdakksjdlkajjojif" because of extreme boredom
 
