--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@ permalink: /404.html
 ---
 
 <!DOCTYPE html>
-<img src="/images/logo.png" alt="SnowballasmediA logo" width="60" height="60"> <img src="/images/snowballasmediawordmark.png" alt="SnowballasmediA">
+<a href="/index.html"><img src="/images/logo.png" alt="SnowballasmediA logo" width="60" height="60"> <img src="/images/snowballasmediawordmark.png" alt="SnowballasmediA"></a>
 <hr>
 <br />
 
