--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-<img src="/images/logo.png" alt="SnowballasmediA logo" width="60" height="60"> <img src="/images/snowballasmediawordmark.png" alt="SnowballasmediA">
+<!DOCTYPE html>
+<a href="/index.html"><img src="/images/logo.png" alt="SnowballasmediA logo" width="60" height="60"> <img src="/images/snowballasmediawordmark.png" alt="SnowballasmediA"></a>
 <hr>
-<br /> <br />
+<br />
 Official website for <b>SnowballasmediA</b>
 <br /><br />
 There is nothing here. <a href="https://snowballasmedia.miraheze.org">¿Or is it?</a>
