Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -6,4 +6,7 @@ Official website for <b>SnowballasmediA</b>
 <br /><br />
 There is nothing here. <a href="https://snowballasmedia.miraheze.org">¿Or is it?</a>
 
+<hr />
+Other languages: <a href="/es">Español<a/>
+
 <link rel="stylesheet" type="text/css" href="styles.css">
