Actualizar index.html

--- a/es/index.html
+++ b/es/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <img src="/images/logo.png" alt="SnowballasmediA logo" width="60" height="60"> <img src="/images/snowballasmediawordmark.png" alt="SnowballasmediA">
-<hr>
+<hr class="new">
 <br />
 Sitio web oficial de <b>SnowballasmediA</b>
 <br /><br />
